--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,4 +1,27 @@
 .container {
-    margin-top: 1em;
+  margin-top: 1em;
+}
 
+.informacion {
+  border: 1px solid black;
+  padding: 1em;
+  margin: 1em;
+  border-radius: 25px;
+  background-color: black;
+  color: white;
+}
+
+::ng-deep ngb-accordion .card-header .btn-link {
+  color: black;
+  cursor: pointer;
+}
+
+::ng-deep ngb-accordion .card-header:hover {
+  background-color: rgb(90, 90, 90);
+  transition-duration: 0.6s;
+}
+
+::ng-deep ngb-accordion .card-header:hover .btn-link {
+  color: white;
+  transition-duration: 0.6s;
 }
